--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build:css": "postcss src/styles/tailwind.css -o src/styles/app.css",
+    "watch:css": "postcss src/styles/tailwind.css -o src/styles/app.css --watch",
+    "react-scripts:start": "sleep 5 && react-scripts start",
+    "start": "run-p watch:css react-scripts:start",
+    "build": "run-s build:css react-scripts:build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -40,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.4",
     "babel-eslint": "^10.1.0",
     "eslint": "^8.11.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -49,6 +53,11 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "prettier": "^2.6.0"
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.12",
+    "postcss-cli": "^9.1.0",
+    "prettier": "^2.6.0",
+    "prop-types": "^15.8.1",
+    "tailwindcss": "^3.0.23"
   }
 }
