--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "@welldone-software/why-did-you-render": "^6.2.3",
     "autoprefixer": "^10.4.4",
     "babel-eslint": "^10.1.0",
     "eslint": "^8.11.0",
